hodu-server/tests/bruno/compile-errors/[c] no semicolon.bru
meta {
  name: [c] no semicolon
  type: http
  seq: 2
}

post {
  url: http://127.0.0.1:8080/api/v1/submit
  body: json
  auth: none
}

headers {
  Content-Type: application/json
}

body:json {
  {
    "language": "C",
    "code": "#include <stdio.h>\nint main() { printf(\"Hello World\") }"
  }
}

assert {
  res.status: eq 200
  res.body.stdout: eq ""
}
